--- a/sass/components/_skils.scss
+++ b/sass/components/_skils.scss
@@ -1,6 +1,10 @@
 .skils {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .skils__title {
@@ -8,9 +12,25 @@
 }
 
 .skils-examples {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  // display: flex;
+  // align-items: flex-start;
+  // justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+.skils-examples__item {
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-left: 30px;
+  }
 }
 
 .skils-examples__title {
@@ -20,6 +40,7 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .skils-examples__paragraph {
@@ -30,9 +51,9 @@
   line-height: 1.71;
 }
 
-.skils-examples__item:not(:last-child) {
-  margin-right: 30px;
-}
+// .skils-examples__item:not(:last-child) {
+//   margin-right: 30px;
+// }
 
 .skils-examples__item::before {
   display: block;
@@ -42,6 +63,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--secondery-bkg-color);
+  // margin-bottom: 55px;
+  margin-top: 55px;
   margin-bottom: 55px;
   padding: 30px 0;
 }
