Герой и команда адаптированы

--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -8,8 +8,7 @@
   display: flex;
 }
 
-.works__title,
-.commands__title {
+.works__title {
   margin-top: 0;
   margin-bottom: 50px;
   color: var(--primary-text-color);
