--- a/css/main.css
+++ b/css/main.css
@@ -233,31 +233,71 @@ body {
 
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  height: 600px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #c4c4c4;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images1/Img.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images1/hero/img-mob.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images1/hero/img-mob-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: url(../images1/hero/img-tab.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images1/hero/img-tab-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: url(../images1/hero/img.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images1/hero/img-2x.jpg);
+  }
+}
+
 .hero__title {
-  width: 696px;
+  width: 360px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
   color: var(--text-white);
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__button {
@@ -279,13 +319,13 @@ body {
 }
 
 .skils {
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
   .skils {
-    padding-top: 94px;
+    padding-top: 65px;
     padding-bottom: 94px;
   }
 }
@@ -372,8 +412,7 @@ body {
   display: flex;
 }
 
-.works__title,
-.commands__title {
+.works__title {
   margin-top: 0;
   margin-bottom: 50px;
   color: var(--primary-text-color);
@@ -409,22 +448,54 @@ body {
 
 .commands {
   background-color: var(--secondery-bkg-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.commands__title {
+  margin-top: 0;
+  color: var(--primary-text-color);
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.178;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .commands__title {
+    margin-bottom: 50px;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .command-card {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
 }
 
 .command-card__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background-color: var(--font-bkg-white-color);
+  margin-top: 30px;
 }
 
-.command-card__item:not(:last-child) {
-  margin-right: 30px;
-  background-color: var(--font-bkg-white-color);
+@media screen and (min-width: 768px) {
+  .command-card__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .command-card__item {
+    margin-top: 0;
+    flex-basis: calc(100% / 4 - 30px);
+    margin-left: 30px;
+  }
 }
 
 .command-card__title {
@@ -440,7 +511,7 @@ body {
 
 .command-card__text {
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
   color: var(--title-text-color);
   font-size: 16px;
   line-height: 1.9;
