--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -1,20 +1,48 @@
 .commands {
   background-color: var(--secondery-bkg-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  // padding-top: 94px;
+  // padding-bottom: 94px;
+}
+
+.commands__title {
+  margin-top: 0;
+  color: var(--primary-text-color);
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 1.178;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .command-card {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
 }
 
 .command-card__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  &:not(:last-child) {
-    margin-right: 30px;
-    background-color: var(--font-bkg-white-color);
+  background-color: var(--font-bkg-white-color);
+  margin-top: 30px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+    flex-basis: calc(100% / 4 - 30px);
+    margin-left: 30px;
   }
 }
 
@@ -31,7 +59,7 @@
 
 .command-card__text {
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
   color: var(--title-text-color);
   font-size: 16px;
   line-height: 1.9;
