--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
   --font-icon: #afb1b8;
 }
 
-.main-nav, .soc-list__link, .portfolio, .klients-list__link, .modal-close, .modal-form__check, .modal-form__item-check {
+.soc-list__link, .portfolio, .klients-list__link, .modal-close, .modal-form__check, .modal-form__item-check {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -146,6 +146,9 @@ body {
 
 /* Main-nav */
 .main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--font-bkg-header-color);
 }
 
@@ -155,7 +158,7 @@ body {
 
 /* Site-nav */
 .site-nav {
-  display: flex;
+  display: none;
 }
 
 .site-nav .site-nav__item:not(:last-child) {
@@ -204,7 +207,7 @@ body {
 }
 
 .site-nav__cont-nav {
-  display: flex;
+  display: none;
   align-items: baseline;
   margin-left: auto;
 }
@@ -228,6 +231,85 @@ body {
 }
 
 .cont-nav__link:hover, .cont-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.open-menu-btn {
+  margin-left: auto;
+  border: 0px solid var(--font-bkg-white-color);
+  background-color: var(--font-bkg-white-color);
+}
+
+.mob-menu {
+  position: fixed;
+  background-color: var(--font-bkg-white-color);
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mob-menu .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.close-menu-btn {
+  display: block;
+  margin-left: auto;
+  border: 0px solid var(--font-bkg-white-color);
+  background-color: var(--font-bkg-white-color);
+}
+
+.mob-menu__item {
+  margin-left: 40px;
+}
+
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+.mob-menu__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mob-menu__mail {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  margin-bottom: 64px;
+}
+
+.mob-menu-soc {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 40px;
+}
+
+.mob-menu-soc__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
   color: var(--accent-color);
 }
 
@@ -267,7 +349,6 @@ body {
     background-image: url(../images1/hero/img.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
-    max-width: 1600px;
   }
 }
 
@@ -404,46 +485,58 @@ body {
 }
 
 /* /----------------* Чем мы занимаемся *------------/  */
-.works {
-  padding-bottom: 94px;
+@media screen and (min-width: 1200px) {
+  .works {
+    padding-bottom: 94px;
+  }
 }
 
-.works__cards {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .works__cards {
+    display: flex;
+  }
 }
 
-.works__title {
-  margin-top: 0;
-  margin-bottom: 50px;
-  color: var(--primary-text-color);
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
+@media screen and (min-width: 1200px) {
+  .works__title {
+    margin-top: 0;
+    margin-bottom: 50px;
+    color: var(--primary-text-color);
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+  }
 }
 
-.works__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .works__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
-.work-overlay {
-  position: relative;
+@media screen and (min-width: 1200px) {
+  .work-overlay {
+    position: relative;
+  }
 }
 
-.work-overlay__text {
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  bottom: 0;
-  left: 0;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.142;
-  text-transform: uppercase;
-  text-align: center;
-  color: var(--text-white);
-  background-color: rgba(47, 48, 58, 0.8);
-  padding: 27px;
+@media screen and (min-width: 1200px) {
+  .work-overlay__text {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.142;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--text-white);
+    background-color: rgba(47, 48, 58, 0.8);
+    padding: 27px;
+  }
 }
 
 .commands {
