--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,7 +1,9 @@
 /* Main-nav */
 
 .main-nav {
-  @extend %align-list;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--font-bkg-header-color);
 }
 
@@ -12,7 +14,8 @@
 /* Site-nav */
 
 .site-nav {
-  display: flex;
+  // display: flex;
+  display: none;
   .site-nav__item:not(:last-child) {
     margin-right: 50px;
   }
@@ -66,7 +69,8 @@
 }
 
 .site-nav__cont-nav {
-  display: flex;
+  // display: flex;
+  display: none;
   align-items: baseline;
   margin-left: auto;
   .cont-nav__item + .cont-nav__item {
@@ -91,4 +95,91 @@
   &:focus {
     color: var(--accent-color);
   }
+}
+
+.open-menu-btn {
+  margin-left: auto;
+  border: 0px solid var(--font-bkg-white-color);
+  background-color: var(--font-bkg-white-color);
+}
+
+.mob-menu {
+  position: fixed;
+  background-color: var(--font-bkg-white-color);
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.close-menu-btn {
+  display: block;
+  margin-left: auto;
+  border: 0px solid var(--font-bkg-white-color);
+  background-color: var(--font-bkg-white-color);
+}
+
+.mob-menu__item {
+  margin-left: 40px;
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+
+  color: var(--primary-text-color);
+}
+
+.mob-menu__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+
+  color: var(--accent-color);
+}
+
+.mob-menu__mail {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+
+  color: var(--title-text-color);
+  margin-bottom: 64px;
+}
+
+.mob-menu-soc {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 40px;
+}
+
+.mob-menu-soc__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+
+  color: var(--accent-color);
+  // &::after {
+  //   width: 22px;
+  //   height: 0;
+  //   border: 1px solid rgba(33, 33, 33, 0.2);
+  //   transform: rotate(90deg);
+  // }
 }
