--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,44 +1,56 @@
 /* /----------------* Чем мы занимаемся *------------/  */
 
 .works {
-  padding-bottom: 94px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+  }
 }
 
 .works__cards {
-  display: flex;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .works__title {
-  margin-top: 0;
-  margin-bottom: 50px;
-  color: var(--primary-text-color);
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+    margin-bottom: 50px;
+    color: var(--primary-text-color);
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+  }
 }
 
 .works__item:not(:last-child) {
-  margin-right: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .work-overlay {
-  position: relative;
+  @media screen and (min-width: 1200px) {
+    position: relative;
+  }
 }
 
 .work-overlay__text {
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  bottom: 0;
-  left: 0;
+  @media screen and (min-width: 1200px) {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    left: 0;
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.142;
-  text-transform: uppercase;
-  text-align: center;
-  color: var(--text-white);
-  background-color: rgba(47, 48, 58, 0.8);
-  padding: 27px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.142;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--text-white);
+    background-color: rgba(47, 48, 58, 0.8);
+    padding: 27px;
+  }
 }
