--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -103,6 +103,11 @@
   background-color: var(--font-bkg-white-color);
 }
 
+.open-menu-btn__icon:hover,
+.open-menu-btn__icon:focus {
+  fill: var(--accent-color);
+}
+
 .mob-menu {
   position: fixed;
   background-color: var(--font-bkg-white-color);
@@ -121,10 +126,17 @@
 }
 
 .close-menu-btn {
-  display: block;
+  position: absolute;
+  top: 10px;
+  right: 15px;
   margin-left: auto;
   border: 0px solid var(--font-bkg-white-color);
   background-color: var(--font-bkg-white-color);
+}
+
+.close-menu-btn__icon:hover,
+.close-menu-btn__icon:focus {
+  fill: var(--accent-color);
 }
 
 .mob-menu__item {
@@ -174,12 +186,12 @@
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-
   color: var(--accent-color);
-  // &::after {
-  //   width: 22px;
-  //   height: 0;
-  //   border: 1px solid rgba(33, 33, 33, 0.2);
-  //   transform: rotate(90deg);
-  // }
+}
+
+.mob-menu-soc__link::after {
+  width: 22px;
+  height: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
