--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -7,12 +7,18 @@
 }
 
 .works__cards {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
   @media screen and (min-width: 1200px) {
     display: flex;
   }
 }
 
 .works__title {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
   @media screen and (min-width: 1200px) {
     margin-top: 0;
     margin-bottom: 50px;
@@ -25,32 +31,25 @@
 }
 
 .works__item:not(:last-child) {
-  @media screen and (min-width: 1200px) {
-    margin-right: 30px;
-  }
+  margin-right: 30px;
 }
 
 .work-overlay {
-  @media screen and (min-width: 1200px) {
-    position: relative;
-  }
+  position: relative;
 }
 
 .work-overlay__text {
-  @media screen and (min-width: 1200px) {
-    position: absolute;
-    width: 100%;
-    height: 70px;
-    bottom: 0;
-    left: 0;
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.142;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--text-white);
-    background-color: rgba(47, 48, 58, 0.8);
-    padding: 27px;
-  }
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  left: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.142;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--text-white);
+  background-color: rgba(47, 48, 58, 0.8);
+  padding: 27px;
 }
