--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,12 @@ body {
   display: none;
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+  }
+}
+
 .site-nav .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
@@ -208,12 +214,40 @@ body {
 
 .site-nav__cont-nav {
   display: none;
-  align-items: baseline;
-  margin-left: auto;
 }
 
-.site-nav__cont-nav .cont-nav__item + .cont-nav__item {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .site-nav__cont-nav {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav__cont-nav {
+    flex-direction: row;
+    align-items: baseline;
+    margin-left: auto;
+  }
+  .site-nav__cont-nav .cont-nav__item + .cont-nav__item {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .cont-nav__item {
+    position: absolute;
+  }
+}
+
+.cont-nav__item--mail {
+  top: -10px;
+  right: 20px;
+}
+
+.cont-nav__item--tel {
+  top: 15px;
+  right: 38px;
 }
 
 .cont-nav__link {
@@ -238,6 +272,12 @@ body {
   margin-left: auto;
   border: 0px solid var(--font-bkg-white-color);
   background-color: var(--font-bkg-white-color);
+}
+
+@media screen and (min-width: 768px) {
+  .open-menu-btn {
+    opacity: 0;
+  }
 }
 
 .open-menu-btn__icon:hover,
@@ -293,6 +333,14 @@ body {
   color: var(--primary-text-color);
 }
 
+.mob-menu__link:hover, .mob-menu__link:focus {
+  color: var(--accent-color);
+}
+
+.mob-menu__link.current {
+  color: var(--accent-color);
+}
+
 .mob-menu__tel {
   font-weight: 500;
   font-size: 34px;
@@ -318,6 +366,7 @@ body {
 }
 
 .mob-menu-soc__link {
+  position: relative;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
@@ -326,6 +375,11 @@ body {
 }
 
 .mob-menu-soc__link::after {
+  position: absolute;
+  bottom: 10px;
+  left: 100%;
+  content: "";
+  display: block;
   width: 22px;
   height: 0;
   border: 1px solid rgba(33, 33, 33, 0.2);
