--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
   --font-icon: #afb1b8;
 }
 
-.soc-list__link, .portfolio, .klients-list__link, .modal-close, .modal-form__check, .modal-form__item-check {
+.soc-list__link, .klients-list__link, .modal-close, .modal-form__check, .modal-form__item-check {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -746,13 +746,36 @@ body {
 }
 
 .filtre {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--font-bkg-white-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .filtre {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .portfolio {
-  padding-bottom: 56px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio {
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-bottom: 50px;
+  }
 }
 
 .portfolio__item:not(:last-child) {
@@ -779,33 +802,39 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.flex {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .flex {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .flex__element {
   box-sizing: border-box;
-  width: 370px;
   background-color: var(--font-bkg-header-color);
-  margin-right: 30px;
-  margin-bottom: 30px;
   border: 1px solid #eeeeee;
   box-shadow: 0;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.flex__element:nth-child(3n) {
-  margin-right: 0;
-}
-
-.flex__element:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
 .flex__element:hover, .flex__element:focus {
   border: 1px solid var(--accent-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+@media screen and (min-width: 768px) {
+  .flex__element {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .flex__element {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
 }
 
 .overley {
@@ -884,7 +913,7 @@ body {
   font-size: 28px;
   line-height: 1.178;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   color: var(--primary-text-color);
 }
 
@@ -892,6 +921,7 @@ body {
   .klients__title {
     font-size: 36px;
     line-height: 1.17;
+    margin-bottom: 50px;
   }
 }
 
@@ -904,29 +934,28 @@ body {
 }
 
 .klients-list__item {
+  flex-basis: calc(100% / 2 - 30px);
   margin-left: 30px;
   margin-bottom: 30px;
   border: 1px solid var(--font-icon);
   box-sizing: border-box;
   border-radius: 4px;
-  padding: 16px, 52px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .klients-list__item:hover, .klients-list__item:focus {
   border: 1px solid var(--accent-color);
-  flex-basis: calc(100% / 2 - 30px);
 }
 
 @media screen and (min-width: 768px) {
-  .klients-list__item:hover, .klients-list__item:focus {
+  .klients-list__item {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .klients-list__item:hover, .klients-list__item:focus {
+  .klients-list__item {
     flex-basis: calc(100% / 6 - 30px);
     margin-left: 30px;
   }
