--- a/css/main.css
+++ b/css/main.css
@@ -962,8 +962,7 @@ body {
 }
 
 .klients-list__link {
-  width: 100%;
-  height: 100%;
+  height: 92px;
   background-color: var(--font-bkg-white-color);
 }
 
