--- a/sass/components/_klients.scss
+++ b/sass/components/_klients.scss
@@ -55,8 +55,8 @@
 
 .klients-list__link {
   @extend %align-list;
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  height: 92px;
   background-color: var(--font-bkg-white-color);
   &:hover {
     .klients-list__icon {
