--- a/css/main.css
+++ b/css/main.css
@@ -986,28 +986,51 @@ body {
   max-width: 1600px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .main-footer {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .main-footer {
+    flex-direction: row;
+    align-items: baseline;
+  }
 }
 
 .footer-section__studio {
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.166;
   text-decoration: none;
   color: var(--text-white);
   transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-section__studio {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .footer-section__logo {
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.166;
   text-decoration: none;
   color: var(--accent-color);
   transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1015,6 +1038,13 @@ body {
 
 .footer-section__logo:hover, .footer-section__logo:focus {
   text-decoration: underline;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-section__logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .footer-section__add {
@@ -1031,6 +1061,12 @@ body {
 
 .footer-section__add:hover, .footer-section__add:focus {
   text-decoration: underline 2px var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .footer-section {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-cont__link {
@@ -1053,6 +1089,12 @@ body {
 .icons {
   display: flex;
   margin-left: 70px;
+}
+
+@media screen and (max-width: 767px) {
+  .network {
+    margin-bottom: 60px;
+  }
 }
 
 .network__title {
@@ -1082,22 +1124,45 @@ body {
   fill: var(--text-white);
 }
 
+@media screen and (max-width: 1199px) {
+  .signup-form__label {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .signup-form {
-  display: flex;
+  align-items: center;
+}
+
+.signup__title {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .signup-form__mail {
+  width: 450px;
+  height: 50px;
   font-size: 16px;
   line-height: 1.25;
   padding: 15px 0 15px 16px;
-  margin-right: 12px;
-  width: 358px;
-  height: 50px;
   box-sizing: border-box;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: var(--footer-bkg-color);
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .signup-form__mail {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .footer-button {
@@ -1140,8 +1205,8 @@ body {
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   background-color: var(--font-bkg-white-color);
   border-radius: 4px;
   padding: 40px;
@@ -1151,6 +1216,13 @@ body {
   transform: rotate(0);
   transform: translate(-50%, -50%);
   transition: 600ms;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-close {
@@ -1178,10 +1250,16 @@ body {
 .modal__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   margin-bottom: 12px;
   color: var(--primary-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+  }
 }
 
 .modal-form__input {
@@ -1204,10 +1282,17 @@ body {
 
 .modal-form__lable {
   display: block;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: var(--title-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__lable {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 
 .modal-form__fild {
@@ -1247,9 +1332,16 @@ body {
 }
 
 .modal-form__check {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   color: var(--title-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__check {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__item-check {
@@ -1274,7 +1366,13 @@ body {
 .modal-form__link {
   display: block;
   color: var(--accent-color);
-  margin-left: 4px;
+  margin-left: 1px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__link {
+    margin-left: 4px;
+  }
 }
 
 .form-send {
