--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,8 +15,8 @@
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   background-color: var(--font-bkg-white-color);
   border-radius: 4px;
   padding: 40px;
@@ -27,6 +27,10 @@
   transform: rotate(0);
   transform: translate(-50%, -50%);
   transition: 600ms;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-close {
@@ -55,11 +59,14 @@
 .modal__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   margin-bottom: 12px;
 
   color: var(--primary-text-color);
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 
 .modal-form__input {
@@ -83,11 +90,15 @@
 
 .modal-form__lable {
   display: block;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
 
   color: var(--title-text-color);
+  @media screen and (min-width: 1200px) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 
 .modal-form__fild {
@@ -130,9 +141,13 @@
 
 .modal-form__check {
   @extend %align-list;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   color: var(--title-text-color);
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__item-check {
@@ -161,7 +176,10 @@
 .modal-form__link {
   display: block;
   color: var(--accent-color);
-  margin-left: 4px;
+  margin-left: 1px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 4px;
+  }
 }
 
 .form-send {
