--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,18 +3,14 @@
   padding-top: 60px;
   padding-bottom: 60px;
   max-width: 1600px;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
 }
 
 .main-footer {
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   @media screen and (min-width: 768px) {
+    text-align: left;
     flex-direction: row;
     align-items: baseline;
   }
@@ -101,8 +97,10 @@
 }
 
 .icons {
-  display: flex;
-  margin-left: 70px;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-left: 70px;
+  }
 }
 
 .network {
@@ -115,11 +113,12 @@
   margin-bottom: 20px;
   font-weight: bold;
   font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   text-transform: uppercase;
 
   color: #ffffff;
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 768px) {
+    margin-left: 70px;
   }
 }
 
@@ -167,7 +166,7 @@
 }
 
 .signup-form__mail {
-  width: 450px;
+  max-width: 450px;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
@@ -179,6 +178,9 @@
   border-radius: 4px;
   background-color: var(--footer-bkg-color);
   margin-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
   @media screen and (min-width: 1200px) {
     width: 358px;
     margin-right: 12px;
@@ -186,6 +188,8 @@
 }
 
 .footer-button {
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   border: none;
   border-radius: 4px;
@@ -202,7 +206,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   background-color: var(--accent-color);
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: 1200px) {
   }
 }
 
