--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,12 +7,20 @@
 
 .main-footer {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
+    display: flex;
     text-align: left;
     flex-direction: row;
     align-items: baseline;
+  }
+}
+
+.container-tab {
+  @media screen and (min-width: 767px) {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    margin-bottom: 60px;
   }
 }
 
@@ -117,14 +125,20 @@
   text-transform: uppercase;
 
   color: #ffffff;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     margin-left: 70px;
   }
 }
 
 .soc-list--footer {
-  margin-left: 70px;
-  margin-right: 93px;
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+    margin-right: 93px;
+  }
 }
 
 .soc-list__link--color {
@@ -142,17 +156,6 @@
 
 // Signup form
 
-.signup-form__label {
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-.signup-form {
-  align-items: center;
-}
-
 .signup__title {
   margin-bottom: 20px;
   font-weight: bold;
@@ -161,12 +164,14 @@
   text-transform: uppercase;
 
   color: #ffffff;
-  @media screen and (max-width: 767px) {
-  }
+}
+
+.signup-form {
+  align-items: center;
 }
 
 .signup-form__mail {
-  max-width: 450px;
+  width: 450px;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
@@ -178,6 +183,7 @@
   border-radius: 4px;
   background-color: var(--footer-bkg-color);
   margin-bottom: 20px;
+
   @media screen and (min-width: 768px) {
     width: 450px;
   }
@@ -188,8 +194,6 @@
 }
 
 .footer-button {
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   border: none;
   border-radius: 4px;
@@ -206,8 +210,6 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   background-color: var(--accent-color);
-  @media screen and (max-width: 1200px) {
-  }
 }
 
 .footer-button__icon {
