--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,6 @@ body {
 .main-nav {
   display: flex;
   align-items: center;
-  justify-content: center;
   background-color: var(--font-bkg-header-color);
 }
 
@@ -165,14 +164,12 @@ body {
   .site-nav {
     display: flex;
   }
-}
-
-.site-nav .site-nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.site-nav .site-nav__link.current {
-  color: var(--accent-color);
+  .site-nav .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .site-nav .site-nav__link.current {
+    color: var(--accent-color);
+  }
 }
 
 .site-nav__link {
@@ -240,6 +237,12 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .cont-nav__item {
+    justify-content: flex-end;
+  }
+}
+
 .cont-nav__item--mail {
   top: -10px;
   right: 20px;
@@ -276,7 +279,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .open-menu-btn {
-    opacity: 0;
+    display: none;
   }
 }
 
@@ -374,7 +377,7 @@ body {
   color: var(--accent-color);
 }
 
-.mob-menu-soc__link::after {
+.mob-menu-soc__item:not(:last-child) .mob-menu-soc__link::after {
   position: absolute;
   bottom: 10px;
   left: 100%;
@@ -782,6 +785,12 @@ body {
   margin-right: 8px;
 }
 
+@media screen and (max-width: 767px) {
+  .portfolio__item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
 .portfolio__button {
   border: none;
   padding: 6px 22px;
@@ -802,16 +811,20 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.flex {
+  margin-left: -30px;
+  margin-bottom: -30px;
+}
+
 @media screen and (min-width: 768px) {
   .flex {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
   }
 }
 
 .flex__element {
-  box-sizing: border-box;
+  margin-bottom: 30px;
   background-color: var(--font-bkg-header-color);
   border: 1px solid #eeeeee;
   box-shadow: 0;
@@ -833,7 +846,6 @@ body {
 @media screen and (min-width: 1200px) {
   .flex__element {
     flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
   }
 }
 
@@ -1171,7 +1183,7 @@ body {
   align-items: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .signup-form {
     display: flex;
     flex-direction: column;
@@ -1179,7 +1191,7 @@ body {
 }
 
 .signup-form__mail {
-  width: 450px;
+  width: 100%;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
@@ -1220,6 +1232,13 @@ body {
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   background-color: var(--accent-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer-button__icon {
