--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -175,14 +175,14 @@
 
 .signup-form {
   align-items: center;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     flex-direction: column;
   }
 }
 
 .signup-form__mail {
-  width: 450px;
+  width: 100%;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
@@ -221,6 +221,10 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   background-color: var(--accent-color);
+  @media screen and (max-width: 1199px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footer-button__icon {
