--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -25,6 +25,11 @@
 .portfolio__item:not(:last-child) {
   margin-right: 8px;
 }
+@media screen and (max-width: 767px) {
+  .portfolio__item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
 
 .portfolio__button {
   border: none;
@@ -54,15 +59,17 @@
 }
 
 .flex {
+  margin-left: -30px;
+  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
   }
 }
 
 .flex__element {
-  box-sizing: border-box;
+  margin-bottom: 30px;
+  // box-sizing: border-box;
   background-color: var(--font-bkg-header-color);
   border: 1px solid #eeeeee;
   box-shadow: 0;
@@ -80,7 +87,6 @@
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
   }
 }
 
